crates/lace-core/tests/snapshots/build__build_erro_conta.snap
---
source: crates/lace-core/tests/build.rs
expression: "normalized(&result, &root, &toolchain)"
---
{
  "processor": "conta",
  "language": "cmm",
  "status": "failed",
  "failed_step": "compile",
  "frequency_mhz": 100,
  "clocks": 2000,
  "steps": [
    {
      "step": "compile",
      "tool": "cmmcomp",
      "command": {
        "program": "[TOOLCHAIN]/yanc/bin/cmmcomp",
        "args": [
          "-i",
          "conta.cmm",
          "-n",
          "conta",
          "-p",
          "[PROJETO]/conta",
          "-m",
          "[TOOLCHAIN]/yanc/Macros",
          "-t",
          "[PROJETO]/.lace/Temp/conta",
          "-en"
        ],
        "cwd": "[PROJETO]/conta",
        "env": [],
        "inherit": []
      },
      "termination": {
        "kind": "exited",
        "value": 1
      },
      "stdout": "",
      "stderr": "Error on line 16: c'mon dude, declare the variable 'total' properly!\n",
      "duration_ms": "[ms]"
    }
  ],
  "diagnostics": [
    {
      "tool": "cmmcomp",
      "severity": "error",
      "message": "c'mon dude, declare the variable 'total' properly!",
      "file": "[PROJETO]/conta/Software/conta.cmm",
      "line": 16,
      "column": null,
      "raw": "Error on line 16: c'mon dude, declare the variable 'total' properly!"
    }
  ],
  "artifacts": [
    {
      "kind": "assembly",
      "path": "[PROJETO]/conta/Software/conta.asm",
      "required": true,
      "fresh": true
    },
    {
      "kind": "verilog",
      "path": "[PROJETO]/conta/Hardware/conta.v",
      "required": true,
      "fresh": false
    },
    {
      "kind": "data_memory",
      "path": "[PROJETO]/conta/Hardware/conta_data.mif",
      "required": true,
      "fresh": false
    },
    {
      "kind": "instruction_memory",
      "path": "[PROJETO]/conta/Hardware/conta_inst.mif",
      "required": true,
      "fresh": false
    },
    {
      "kind": "testbench",
      "path": "[PROJETO]/conta/Simulation/conta_tb.v",
      "required": true,
      "fresh": false
    },
    {
      "kind": "program_counter_map",
      "path": "[PROJETO]/.lace/Temp/conta/pc_conta_mem.txt",
      "required": false,
      "fresh": true
    },
    {
      "kind": "compiler_log",
      "path": "[PROJETO]/.lace/Temp/conta/cmm_log.txt",
      "required": false,
      "fresh": true
    }
  ],
  "duration_ms": "[ms]"
}
